# InformationRetrievalSystem-Word2Vec

./: .gitignore  README.md  main.py  map_report.txt  pyproject.toml
api/: main.py
chart/: architecture.mermaid
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: search.ts
frontend/src/components/: ParameterPanel.tsx  SearchBar.tsx
frontend/src/components/results/: ExpansionTab.tsx  MapReportTab.tsx  ResultsTab.tsx
frontend/src/components/ui/: EmptyState.tsx  TabBar.tsx
frontend/src/hooks/: useSearch.ts
frontend/src/pages/: SearchPage.tsx
frontend/src/types/: search.ts
laporan/: laporan.aux  laporan.out  laporan.tex  laporan.toc  programmer_reference.md  user_guide.md
src/: evaluator.py  indexer.py  parser.py  preprocessor.py  query_expansion.py  retrieval.py  weighting.py  word2vec_engine.py
