[project]
name = "informationretrievalsystem-word2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "gensim>=4.4.0",
    "nltk>=3.9.4",
    "pysastrawi>=1.2.1",
    "pytest>=9.0.3",
    "python-multipart>=0.0.30",
    "uvicorn[standard]>=0.48.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]